[tool.poetry]
name = "santa-locomotive"
version = "0.1.0"
description = ""
authors = ["Nemesis <lorenzo.balugani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
steamfront = "^0.1.0"
steam = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
