[tool.poetry]
name = "santa-locomotive"
version = "0.2.0"
description = "Command-line Steam info fetcher"
authors = [
   "Lorenzo Balugani <lorenzo.balugani@gmail.com>",
   "Stefano Pigozzi <me@steffo.eu>",
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
steamfront = "^0.1.0"
steam = "^1.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
"santa-locomotive" = "santa_locomotive.__main__:combustion_chamber"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
